--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Take It Home</string>
+    <string name="app_name">Take-Home</string>
     <string name="action_syncUrl">Sync Server Url</string>
     <string name="action_syncNow">Sync Device</string>
     <string name="action_settings">Settings</string>
@@ -7,7 +7,7 @@
     <string name="action_help">Help</string>
     <string name="action_about">About</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_login">Take It Home</string>
+    <string name="title_activity_login">Take-Home</string>
 
     <!-- Related to First Time Dialog -->
     <string name="fst_welcome">OLE Personal Bell</string>
